@@ -1,3 +1,4 @@
+    ADDED: useraction: now every placeholder can cancel the execution. (-> %_ask(..)%)
     ADDED: useraction: new placeholder: %_PanelSize(percent)%
     ADDED: Synchronizer, pause/resume button for synchronize with kget
     ADDED: disk usage (tools menu + 3rd panel)
